# continuum

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
api/: .gitignore  Cargo.toml
api/migrations/: 0001_init.sql
api/openapi/: openapi.json
api/src/: db.rs  main.rs  routes.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: theorie.md
examples/: small_infra.json
graph-engine/: Cargo.toml
graph-engine/src/: commit.rs  graph.rs  lib.rs  node.rs  repository.rs
osrd-bridge/: Cargo.toml
osrd-bridge/src/: lib.rs  railjson.rs
osrd-bridge/tests/: railjson_roundtrip.rs  spatial_conflicts.rs
schema-engine/: Cargo.toml
schema-engine/examples/: layout_smoke_test.rs  smoke_test.rs
schema-engine/src/: extract.rs  geometry.rs  layout.rs  lib.rs  railjson.rs
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  api.ts  conflictUtils.ts  nodeKind.tsx  theme.css  vite-env.d.ts
web/src/components/: CommitForm.tsx  ComparisonTab.tsx  ConflictResolutionPanel.tsx  CreateBranchForm.tsx  HistoryBoard.tsx  MapPair.tsx  MergePanel.tsx  NodeGroupList.tsx  SchemaTab.tsx
