[package]
name = "continuum-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
continuum_graph_engine = { path = "../graph-engine" }
continuum_osrd_bridge = { path = "../osrd-bridge" }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "migrate", "macros"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
