[package]
name = "continuum_osrd_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
continuum_graph_engine = { path = "../graph-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
